<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    tools:context=".fragments_.QuizFragment">

    <ImageButton
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/quiz_close_btn"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_close_btn"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_title"
        app:layout_constraintTop_toBottomOf="@+id/quiz_close_btn"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/loading_quiz"
        android:fontFamily="@font/crimson_text"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/quiz_title"
        app:layout_constraintEnd_toEndOf="@+id/quiz_close_btn"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_question_number_title"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title"
        android:textColor="@color/colorLightText"
        android:text="@string/question"
        android:fontFamily="@font/work_sans" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/quiz_question_number_title"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question_number_title"
        android:id="@+id/quiz_question_number"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_number_title"
        android:textSize="36sp"
        android:textColor="@android:color/white"
        android:text="@string/_0"
        android:fontFamily="@font/work_sans" />

    <ProgressBar
        android:id="@+id/quiz_question_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:progressDrawable="@drawable/circular_progress"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_question_number"
        app:layout_constraintEnd_toEndOf="@+id/quiz_title"
        app:layout_constraintStart_toStartOf="@+id/quiz_close_btn"
        app:layout_constraintTop_toBottomOf="@+id/quiz_title" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/quiz_question_progress"
        app:layout_constraintStart_toStartOf="@+id/quiz_question_progress"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question_progress"
        android:id="@+id/quiz_question_time"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:text="@string/_10"
        android:fontFamily="@font/work_sans"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_question_progress" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_question"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question_number"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:text="@string/fetching_data"
        android:fontFamily="@font/work_sans"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp" />

    <Button
        android:background="@drawable/outline_light_btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_option_one"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:text="@string/option_button"
        android:fontFamily="@font/work_sans"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:textAllCaps="false" />

    <Button
        android:background="@drawable/outline_light_btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:id="@+id/quiz_option_two"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_one"
        android:textSize="16sp"
        android:textColor="@color/colorLightText"
        android:text="@string/option_button"
        android:fontFamily="@font/work_sans"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/quiz_option_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_padding_list_fragment"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_light_btn_bg"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_two" />

    <TextView
        android:visibility="invisible"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:id="@+id/quiz_question_feedback"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_three"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/verifying_answer"
        android:fontFamily="@font/work_sans"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp" />

    <Button
        android:visibility="invisible"
        android:background="@drawable/primary_btn_bg"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/quiz_next_btn"
        android:textSize="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/next_question"
        android:fontFamily="@font/work_sans"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>